# habit-tracker

./: .env  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docs.py  entrypoint.sh  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  permissions.py  serializer.py  services.py  tasks.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: fabrics.py  test_habit.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py
